--- a/src/assets/scss/vuexy/extraComponents/_vueSelect.scss
+++ b/src/assets/scss/vuexy/extraComponents/_vueSelect.scss
@@ -1,13 +1,3 @@
-/*=========================================================================================
-    File Name: _vueSelect.scss
-    Description: vue-select component style.
-    ----------------------------------------------------------------------------------------
-    Item Name: Vuexy - Vuejs, HTML & Laravel Admin Dashboard Template
-      Author: Pixinvent
-    Author URL: http://www.themeforest.net/user/pixinvent
-==========================================================================================*/
-
-
 @import "../_variables.scss";
 
 .v-select {
@@ -109,4 +99,4 @@ $vs-state-active-bg: $primary !default;
 $vs-state-active-color: $white !default;
 
 
-@import "~vue-select/src/scss/vue-select.scss"
+@import "~vue-select/src/scss/vue-select.scss";
